@@ -1,4 +1,4 @@
 DIST exact-image-0.6.9.tar.bz2 527058 RMD160 4629ef68df4b4bd240311f65fe5165f133ce287d SHA1 9bcd22b5d4f1e7a6549cfc56be4835c035355dec SHA256 8a586b609f0a185a6a276172b32e09fb51412e5fde69cf1036f5772372585b86
-EBUILD exact-image-0.6.9.ebuild 1789 RMD160 012311d378285c328ff51e1c9f1247e256114d6c SHA1 eda2cbd6e9449cba537afe65d1ca074e6160400e SHA256 126850a7aa3705bff14693be63bb72757d53c4845e07c7a8b29d9eb06eaee66a
-MISC ChangeLog 653 RMD160 ce721f4c3683fa3563f6845ae60d6e1a7c1a2bb2 SHA1 f9f18630fb8bc4761fb39d8a67574127aa85b2f9 SHA256 6d77a4928add0c7237ee60f69cceeb42fb65da8ec12c2ab88577c40a3754d719
+EBUILD exact-image-0.6.9.ebuild 1811 RMD160 3f2bd697ecbb0d0e280e1bb009fcb7bef63ba00c SHA1 79a249483e000716793a77092d60dabe4b7a0f2b SHA256 e619737167be9a7381a7fb2fed60b906d5783548f17b87933d66e734c2099465
+MISC ChangeLog 801 RMD160 b681c20310d8b3549adbefe67c890e93c21344b7 SHA1 9d26a3239298b370499b49273ff20b2a3c9d053f SHA256 23445a8790a5127d78da0887242ab9640fc8fc4a444d4aea69c73ded5f122648
 MISC metadata.xml 333 RMD160 329c513536d819fb4c3b9d9c79b4aeb12e5fc8c7 SHA1 f9a73130193ec44ce2e85bbce9e1e2d1327bd4b9 SHA256 3f49a81375ed1b4007df40552c628b6412313c3050c2ac4ba171b5a36f10680c
