@@ -4,6 +4,10 @@
 
   20 Dec 2008; Markos Chandras (hwoarang) <hwoarang@silverarrow.gr>
   exact-image-0.6.9.ebuild:
+  removed dev-lang/swing from runtime dependencies
+
+  20 Dec 2008; Markos Chandras (hwoarang) <hwoarang@silverarrow.gr>
+  exact-image-0.6.9.ebuild:
   Added src_configure fucntion due to EAPI-2, drop src_compile function
 
   18 Dec 2008; Markos Chandras (hwoarang) <hwoarang@silverarrow.gr>
